# dev-tools-lab

./: AGENT.md  BACKLOG.md  LICENSE  README.md  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml  codex-daily.yml
src/dev_tools_lab/: line_count.py  main.py
tests/: test_line_count.py  test_smoke.py
